Fixed overlapping columns and star rating container in top component
Video name column and star rating column overlapped due to absolute position -> fixed
TC (top component) star rating shows rating from sheet's rating -> fixed

TC star rating is unable to update after sheet's rating changes, need to click on video again to update -> WIP
TC star rating is unable to update directly on TC, due to index error -> WIP

--- a/src/app/components/top/top.component.scss
+++ b/src/app/components/top/top.component.scss
@@ -95,8 +95,7 @@
 }
 
 .starRating {
-  position: absolute;
-  right: 0;
+  float: right;
   width: 117px;
   margin-left: 5px;
 }
